# swagger_output.json
@@ -5,13 +5,71 @@
     "description": "Projeto Conta365, tem a finalidade de avaliar o conhecimento em NodeJS atráves da criação de APIs, manipulação de arquivos e capacidade de elaboração de soluções para problemas, e também criação de documentações. Esta API foi desenvolvida por Vitor dos Santos Pedra",
     "version": "1.0.0"
   },
-  "host": "warm-inlet-55774.herokuapp.com",
+  "host": "localhost:3333",
   "basePath": "/",
   "schemes": [
-    "https"
+    "http"
   ],
   "paths": {
+    "/api/finance/ids/{userid}": {
+      "get": {
+        "tags": [
+          "finanças"
+        ],
+        "summary": "Retorna as despesas com ids",
+        "description": "Utilize o userid, para retornar as despesas do usuário com suas id. Retorna erro adequado caso o usuário não exista.",
+        "parameters": [
+          {
+            "name": "userid",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
     "/api/finance/{userid}": {
+      "get": {
+        "tags": [
+          "finanças"
+        ],
+        "summary": "Retorna as despesas com base no userid e queries",
+        "description": "Utilize o userid, para retornar as despesas do usuário, podendo usar uma das queries para retornar por mês/ano, Ex:Setembro/2022, ou por tipo, Ex:groceries, se as duas queries estiverem preenchidas retornará apenas por mês/ano. Retorna erro adequado caso o usuário não exista.",
+        "parameters": [
+          {
+            "name": "userid",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "bymonthyear",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "expenses",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      },
       "post": {
         "tags": [
           "finanças"
@@ -35,39 +93,6 @@
             "required": true,
             "description": "Arquivo xlsx(excel)",
             "accept": "/"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          }
-        }
-      },
-      "get": {
-        "tags": [
-          "finanças"
-        ],
-        "summary": "Retorna as despesas com base no userid e queries",
-        "description": "Utilize o userid, para retornar as despesas do usuário, podendo usar uma das queries para retornar por mês/ano, Ex:Setembro/2022, ou por tipo, Ex:groceries, se as duas queries estiverem preenchidas retornará apenas por mês/ano. Retorna erro adequado caso o usuário não exista.",
-        "parameters": [
-          {
-            "name": "userid",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "bymonthyear",
-            "in": "query",
-            "type": "string"
-          },
-          {
-            "name": "expenses",
-            "in": "query",
-            "type": "string"
           }
         ],
         "responses": {
@@ -203,6 +228,6 @@
     }
   },
   "default": [
-    "https"
+    "http"
   ]
 }
